[gd_scene load_steps=9 format=3 uid="uid://7kg3g2xgh6rm"]

[ext_resource type="Script" path="res://scripts/master_screen.gd" id="1_uhdpj"]
[ext_resource type="Texture2D" uid="uid://d2peix8vcw51r" path="res://assets/images/tse_placeholder_logo.png" id="2_430or"]
[ext_resource type="Texture2D" uid="uid://cimtj75m1wmoe" path="res://assets/panels/button_panel/button_panel_400x100.png" id="3_ly56c"]
[ext_resource type="Texture2D" uid="uid://d1tga5njkvlsk" path="res://assets/panels/button_panel/button_panel_400x100_hover.png" id="4_jkrq8"]
[ext_resource type="Texture2D" uid="uid://dhjtn4qkrcj7b" path="res://assets/panels/button_panel/button_panel_400x100_pressed.png" id="4_rfuie"]
[ext_resource type="LabelSettings" uid="uid://ckg0j8haan05w" path="res://assets/fonts/orbitron_48_so.tres" id="6_0kjul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3yrw"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xj454"]
bg_color = Color(0.411765, 0.411765, 0.411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MasterScreen" type="CanvasLayer"]
script = ExtResource("1_uhdpj")

[node name="BackgroundLayers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="OuterRect" type="ColorRect" parent="BackgroundLayers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MiddleRect" type="Panel" parent="BackgroundLayers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -940.0
offset_top = -520.0
offset_right = 940.0
offset_bottom = 520.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w3yrw")

[node name="InnerRect" type="Panel" parent="BackgroundLayers"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -920.0
offset_top = -500.0
offset_right = 920.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xj454")

[node name="GameArea" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainContainer" type="VBoxContainer" parent="GameArea"]
layout_mode = 2

[node name="TitleImage" type="TextureRect" parent="GameArea/MainContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_430or")
stretch_mode = 5

[node name="MenuMargin" type="MarginContainer" parent="GameArea/MainContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="ButtonContainer" type="VBoxContainer" parent="GameArea/MainContainer/MenuMargin"]
layout_mode = 2

[node name="NewGame" type="TextureButton" parent="GameArea/MainContainer/MenuMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ly56c")
texture_pressed = ExtResource("4_rfuie")
texture_hover = ExtResource("4_jkrq8")

[node name="Label" type="Label" parent="GameArea/MainContainer/MenuMargin/ButtonContainer/NewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "NEW GAME"
label_settings = ExtResource("6_0kjul")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadGame" type="TextureButton" parent="GameArea/MainContainer/MenuMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ly56c")
texture_pressed = ExtResource("4_rfuie")
texture_hover = ExtResource("4_jkrq8")

[node name="Label" type="Label" parent="GameArea/MainContainer/MenuMargin/ButtonContainer/LoadGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "LOAD GAME"
label_settings = ExtResource("6_0kjul")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings" type="TextureButton" parent="GameArea/MainContainer/MenuMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ly56c")
texture_pressed = ExtResource("4_rfuie")
texture_hover = ExtResource("4_jkrq8")

[node name="Label" type="Label" parent="GameArea/MainContainer/MenuMargin/ButtonContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "SETTINGS"
label_settings = ExtResource("6_0kjul")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discord" type="TextureButton" parent="GameArea/MainContainer/MenuMargin/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ly56c")
texture_pressed = ExtResource("4_rfuie")
texture_hover = ExtResource("4_jkrq8")

[node name="Label" type="Label" parent="GameArea/MainContainer/MenuMargin/ButtonContainer/Discord"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "DISCORD"
label_settings = ExtResource("6_0kjul")
horizontal_alignment = 1
vertical_alignment = 1
